# wgpudemo

./: .gitignore  Cargo.toml  README.md  run.ps1
.cargo/: config.toml
src/: binding.rs  camera.rs  intersection.rs  lib.rs  renderer.rs  sphere.rs
www/: index.html
www/public/shaders/: intersect.wgsl  rays.wgsl  rt.comp.wgsl  shade.wgsl  simple.wgsl
