[package]
name = "gpudemo"
version = "0.1.0"
edition = "2021"
authors = ["Baidhir Hidair <justin.hidair@gmail.com>"]


[lib]
crate-type = ["cdylib"]

[dependencies]
console_log = "1.0.0"
log = "0.4"
winit = { version = "0.30.9", features = ["rwh_06"] }
wgpu = "24.0.3"
bytemuck = { version = "1.22.0" , features = ["derive"]}
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
nalgebra = "0.33.2"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.77", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "console",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
]}
